@@ -4,10 +4,10 @@ import com.google.gson.Gson;
 import com.google.gson.JsonObject;
 import io.github.cdimascio.dotenv.Dotenv;
 
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 
 public class ConversionRates {
     private final Dotenv dotenv = Dotenv.configure().load();
@@ -16,24 +16,15 @@ public class ConversionRates {
 
     public double consultarTasaCambio(String origenMoneda, String destinoMoneda) {
         try {
-            String urlString = API_URL + origenMoneda;
-            URL url = new URL(urlString);
-            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-            conn.setRequestMethod("GET");
+            HttpClient client = HttpClient.newHttpClient();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(API_URL + origenMoneda))
+                    .build();
 
-            BufferedReader in = new BufferedReader(new InputStreamReader(conn.getInputStream()));
-            String inputLine;
-            StringBuffer content = new StringBuffer();
-
-            while ((inputLine = in.readLine()) != null) {
-                content.append(inputLine);
-            }
-
-            in.close();
-            conn.disconnect();
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
 
             Gson gson = new Gson();
-            JsonObject json = gson.fromJson(content.toString(), JsonObject.class);
+            JsonObject json = gson.fromJson(response.body(), JsonObject.class);
             return json.getAsJsonObject("conversion_rates").get(destinoMoneda).getAsDouble();
 
         } catch (Exception e) {
